--- a/BTC-FBProphet.ipynb
+++ b/BTC-FBProphet.ipynb
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -542,8 +542,8 @@
    ],
    "source": [
     "mod.plot(forecast, uncertainty=True)\n",
-    "\n",
     "plt.title('Facebook Prophet Forecast and Fitting')\n",
+    "plt.savefig('fb_fc_fit.png')\n",
     "plt.show()"
    ]
   },
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -575,6 +575,7 @@
     "\n",
     "plt.xlim(['2019-04-01', '2019-10-10'])\n",
     "plt.ylim([5000, 15000])\n",
+    "plt.savefig('fb_zoom.png')\n",
     "plt.show()"
    ]
   },
