started fbprophet with tech indicators

--- a/Creating-Tech-Indicators.ipynb
+++ b/Creating-Tech-Indicators.ipynb
@@ -2751,10 +2751,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"df_indicators.pkl\", 'wb') as fp:\n",
+    "    pickle.dump(df, fp)"
+   ]
   },
   {
    "cell_type": "code",
