--- a/VARMAX-Potential New Machine Learning Model.ipynb
+++ b/VARMAX-Potential New Machine Learning Model.ipynb
@@ -1345,18 +1345,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Splitting\n",
+    "Training and Testing"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Splitting 80/20\n",
+    "index = round(len(df)*.80)\n",
+    "\n",
+    "# Train and Test\n",
+    "train = df.iloc[:index]\n",
+    "\n",
+    "test = df.iloc[index:]"
+   ]
   },
   {
    "cell_type": "code",
