started the parameter search function

--- a/ARMA-Stock-Model.ipynb
+++ b/ARMA-Stock-Model.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 110,
    "metadata": {
     "scrolled": true
    },
@@ -751,7 +751,7 @@
        "[1259 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -956,6 +956,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Parameter Search\n",
+    "Using a function to find the best parameters for the ARMA model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def param_search(model, data, pq):\n",
+    "    \"\"\"\n",
+    "    Loops through each iteration of the model and returns the best performing parameter\n",
+    "    \"\"\"\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Modeling"
    ]
   },
@@ -968,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,9 +1023,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/statsmodels/tsa/base/tsa_model.py:225: ValueWarning: A date index has been provided, but it has no associated frequency information and so will be ignored when e.g. forecasting.\n",
+      "  ' ignored when e.g. forecasting.', ValueWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "model = ARMA(train,\n",
     "             order=(1,0))\n",
@@ -1008,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1020,8 +1064,8 @@
       "Dep. Variable:                  Close   No. Observations:                 1007\n",
       "Model:                     ARMA(1, 0)   Log Likelihood                2934.435\n",
       "Method:                       css-mle   S.D. of innovations              0.013\n",
-      "Date:                Mon, 18 May 2020   AIC                          -5862.871\n",
-      "Time:                        12:02:57   BIC                          -5848.127\n",
+      "Date:                Wed, 27 May 2020   AIC                          -5862.871\n",
+      "Time:                        12:48:14   BIC                          -5848.127\n",
       "Sample:                             0   HQIC                         -5857.269\n",
       "                                                                              \n",
       "===============================================================================\n",
@@ -1051,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,9 +1119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/statsmodels/tsa/base/tsa_model.py:531: ValueWarning: No supported index is available. Prediction results will be given with an integer index beginning at `start`.\n",
+      "  ValueWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = output.predict(start=1, end=len(train))\n",
     "\n",
@@ -1093,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
