imported itertools to start finding combinations

--- a/ARMA-Stock-Model.ipynb
+++ b/ARMA-Stock-Model.ipynb
@@ -16,12 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import itertools\n",
     "from statsmodels.tsa.stattools import adfuller\n",
     "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
     "from statsmodels.tsa.arima_model import ARMA\n",
@@ -962,15 +963,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Assigning variables to the p and q values\n",
+    "p = q = range(0,5)\n",
+    "\n",
+    "# Finding all possible combinations of p and q\n",
+    "pq = list(itertools.product(p, q))\n",
+    "\n",
     "def param_search(model, data, pq):\n",
     "    \"\"\"\n",
     "    Loops through each iteration of the model and returns the best performing parameter\n",
     "    \"\"\"\n",
-    "    "
+    "    return"
    ]
   },
   {
