added the loop to iterate through each combination

--- a/ARMA-Stock-Model.ipynb
+++ b/ARMA-Stock-Model.ipynb
@@ -977,7 +977,28 @@
     "    \"\"\"\n",
     "    Loops through each iteration of the model and returns the best performing parameter\n",
     "    \"\"\"\n",
-    "    return"
+    "    \n",
+    "    # Empty dictionary containing the combination and AIC score\n",
+    "    lst = {}\n",
+    "    \n",
+    "    # Loop to find the best combination\n",
+    "    for comb in tqdm(pq):\n",
+    "        try:\n",
+    "            # Instantiating the model\n",
+    "            mod = model(data,\n",
+    "                        order=comb)\n",
+    "            \n",
+    "            # Fitting the model\n",
+    "            output = mod.fit()\n",
+    "            \n",
+    "            # Appending to the list\n",
+    "            lst[comb] = output.aic\n",
+    "        \n",
+    "        except:\n",
+    "            continue\n",
+    "    \n",
+    "    # Returning the combination with lowest AIC score\n",
+    "    return "
    ]
   },
   {
