finished the function param_search

--- a/ARMA-Stock-Model.ipynb
+++ b/ARMA-Stock-Model.ipynb
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,13 +973,14 @@
     "# Finding all possible combinations of p and q\n",
     "pq = list(itertools.product(p, q))\n",
     "\n",
+    "\n",
     "def param_search(model, data, pq):\n",
     "    \"\"\"\n",
     "    Loops through each iteration of the model and returns the best performing parameter\n",
     "    \"\"\"\n",
     "    \n",
     "    # Empty dictionary containing the combination and AIC score\n",
-    "    lst = {}\n",
+    "    lst = []\n",
     "    \n",
     "    # Loop to find the best combination\n",
     "    for comb in tqdm(pq):\n",
@@ -992,28 +993,17 @@
     "            output = mod.fit()\n",
     "            \n",
     "            # Appending to the list\n",
-    "            lst[comb] = output.aic\n",
+    "            lst.append([comb, output.aic])\n",
     "        \n",
     "        except:\n",
     "            continue\n",
+    "            \n",
+    "    # Sorting the list\n",
+    "    lst = sorted(lst, key=lambda i: i[1])\n",
     "    \n",
-    "    # Returning the combination with lowest AIC score\n",
-    "    return "
+    "    # Returning the combination with the lowest score\n",
+    "    return lst[0]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1041,6 +1031,20 @@
     "train = df.iloc[:index]\n",
     "test = df.iloc[index:]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
