fit the model to the entire dataset

--- a/ARMA-Stock-Model.ipynb
+++ b/ARMA-Stock-Model.ipynb
@@ -1275,11 +1275,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fitting the Model to the Entire Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = ARMA(df,\n",
+    "             order=best_param[0])\n",
+    "\n",
+    "\n",
+    "output = model.fit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary and Diagnostics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              ARMA Model Results                              \n",
+      "==============================================================================\n",
+      "Dep. Variable:                  Close   No. Observations:                 1259\n",
+      "Model:                     ARMA(3, 2)   Log Likelihood                3257.112\n",
+      "Method:                       css-mle   S.D. of innovations              0.018\n",
+      "Date:                Mon, 01 Jun 2020   AIC                          -6500.224\n",
+      "Time:                        12:40:54   BIC                          -6464.257\n",
+      "Sample:                             0   HQIC                         -6486.707\n",
+      "                                                                              \n",
+      "===============================================================================\n",
+      "                  coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------\n",
+      "const           0.4288      0.148      2.895      0.004       0.139       0.719\n",
+      "ar.L1.Close    -0.7411      0.026    -28.707      0.000      -0.792      -0.691\n",
+      "ar.L2.Close     0.8388      0.011     77.895      0.000       0.818       0.860\n",
+      "ar.L3.Close     0.8933      0.028     32.458      0.000       0.839       0.947\n",
+      "ma.L1.Close     1.6189      0.037     43.242      0.000       1.546       1.692\n",
+      "ma.L2.Close     0.7389      0.041     17.902      0.000       0.658       0.820\n",
+      "                                    Roots                                    \n",
+      "=============================================================================\n",
+      "                  Real          Imaginary           Modulus         Frequency\n",
+      "-----------------------------------------------------------------------------\n",
+      "AR.1            1.0025           -0.0000j            1.0025           -0.0000\n",
+      "AR.2           -0.9707           -0.4175j            1.0567           -0.4353\n",
+      "AR.3           -0.9707           +0.4175j            1.0567            0.4353\n",
+      "MA.1           -1.0955           -0.3916j            1.1633           -0.4454\n",
+      "MA.2           -1.0955           +0.3916j            1.1633            0.4454\n",
+      "-----------------------------------------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(output.summary())"
+   ]
   },
   {
    "cell_type": "code",
