created forecasted values

--- a/ARMA-Stock-Model.ipynb
+++ b/ARMA-Stock-Model.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "from statsmodels.tsa.arima_model import ARMA\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from datetime import datetime \n",
+    "from datetime import datetime, timedelta \n",
     "from tqdm import tqdm_notebook as tqdm\n",
     "plt.style.use('bmh')"
    ]
@@ -1346,18 +1346,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Forecasting the Future"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Number of Periods to forecast\n",
+    "periods = 90\n",
+    "\n",
+    "# Getting Forecast and Confidence Intervals\n",
+    "forecast = output.forecast(periods)\n",
+    "fc       = forecast[0]\n",
+    "conf     = forecast[-1]\n",
+    "\n",
+    "# Putting the Data into a Pandas Series\n",
+    "fc_series = pd.Series(fc, index=pd.date_range(start=df.index[-1]+timedelta(days=1), periods=periods, freq=\"B\"))\n",
+    "up_conf   = pd.Series(conf[:, 0], index=pd.date_range(start=df.index[-1]+timedelta(days=1), periods=periods, freq=\"B\"))\n",
+    "low_conf  = pd.Series(conf[:, 1], index=pd.date_range(start=df.index[-1]+timedelta(days=1), periods=periods, freq=\"B\"))"
+   ]
   },
   {
    "cell_type": "code",
