started creating the column for predictions

--- a/ARMA-Stock-Model.ipynb
+++ b/ARMA-Stock-Model.ipynb
@@ -2541,6 +2541,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Run the ARMA model for predictions over a timeframe that constantly is added to or slides"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Days to predict in the future\n",
+    "pred_periods = 5\n",
+    "\n",
+    "# List containing predicted prices\n",
+    "pred_prices = []\n",
+    "\n",
+    "# Assigning variables to the p and q values\n",
+    "p = q = range(0,5)\n",
+    "\n",
+    "# Finding all possible combinations of p and q\n",
+    "pq = list(itertools.product(p, q))\n",
+    "\n",
+    "for i in range(len(df.Close)):\n",
+    "    \n",
+    "    # Skipping the first 300 prices\n",
+    "    if i < 300:\n",
+    "        pred_prices.append(None)\n",
+    "        \n",
+    "    else:\n",
+    "        \n",
+    "        # Finding the best parameters so far\n",
+    "        best_param = param_search(ARMA, df.Close[:i], pq)\n",
+    "\n",
+    "        # Fitting the model\n",
+    "        model = ARMA(df.Close[:i],\n",
+    "                     order=best_param[0])\n",
+    "\n",
+    "\n",
+    "        output = model.fit()\n",
+    "        \n",
+    "        # Getting and appending predictions\n",
+    "        predictions = output.forecast(pred_periods)\n",
+    "        \n",
+    "        pred_prices.extend(predictions[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
