--- a/Stock-RNN-Deep-Learning-TechIndicators.ipynb
+++ b/Stock-RNN-Deep-Learning-TechIndicators.ipynb
@@ -1263,13 +1263,7 @@
       "792/792 [==============================] - 5s 6ms/step - loss: 0.0020 - accuracy: 0.2298 - val_loss: 0.4666 - val_accuracy: 0.1685\n",
       "Epoch 55/100\n",
       "792/792 [==============================] - 5s 6ms/step - loss: 0.0020 - accuracy: 0.2184 - val_loss: 0.4594 - val_accuracy: 0.1685\n",
-      "Epoch 56/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 56/100\n",
       "792/792 [==============================] - 5s 6ms/step - loss: 0.0020 - accuracy: 0.2374 - val_loss: 0.4651 - val_accuracy: 0.1685\n",
       "Epoch 57/100\n",
       "792/792 [==============================] - 5s 6ms/step - loss: 0.0020 - accuracy: 0.2197 - val_loss: 0.4610 - val_accuracy: 0.1685\n",
@@ -1601,7 +1595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
